--- a/app/assets/javascripts/templates/messages/message_details.hbs
+++ b/app/assets/javascripts/templates/messages/message_details.hbs
@@ -1,9 +1,10 @@
 {{#each messages}}
   <div class="row">
-    <p>{{subject}}</p>
-    <p>{{body}}</p>
-    <p>{{updated_at}}</p>
-    <p>{{sender_id}}</p>
+    <p>Subject :{{subject}}</p>
+    <p>Message :{{body}}</p>
+    <p>Sent :{{updated_at}}</p>
+    <p>From :{{sender_id}}</p>
+    <p>To :{{recipient_id}}</p>
   </div>
 
 {{/each}}
