--- a/app/assets/javascripts/templates/site/tabs.hbs
+++ b/app/assets/javascripts/templates/site/tabs.hbs
@@ -2,6 +2,7 @@
   <dl class="tabs" data-tab>
     <dd class="active"><a id="tab-profile" href="#panel-profile">Your Profile</a></dd>
     <dd><a id="tab-tools" href="#panel-tools">Your Tools</a></dd>
+    <dd><a id="tab-conversations" href="#panel-conversations">Your Inbox</a></dd>
   </dl>
 
   <div class="tabs-content">
@@ -9,6 +10,9 @@
 
     </div>
     <div class="content" id="panel-tools">
+
+    </div>
+    <div class="content" id="panel-conversations">
 
     </div>
   </div>
